fix: update commit hook

--- a/app/git-hook.gradle
+++ b/app/git-hook.gradle
@@ -1,8 +1,6 @@
 /**
  * 用法：
  * apply from: 'git-hook.gradle'
- * 博客：
- * https://yanbober.blog.csdn.net/article/details/108719178
  */
 
 /**
@@ -41,6 +39,7 @@ def getGitHookFile(fileName) {
 task prepareGitHookConfig(type: Copy) {
     from getConfigFile()
     into getGitHookDir()
+    // 需要添加权限
     fileMode 0755
 }
 
